--- a/申请书.md
+++ b/申请书.md
@@ -1,4 +1,4 @@
-# <center>自愿降级申请书
+# <center> 自愿降级申请书 </center>
 ## 您可在 https://github.com/dao019/basic-disciplines 检查纸质版的完整性与其他内容
 ## 尊敬的学院/教务处领导：
 ### &emsp;&emsp;我是兰州大学药学专业的学生，经过深思熟虑，我决定向您提交一份自愿降级申请书。进入大学以来，我努力适应本专业课程体系。但在学习过程中，我逐渐发现，自己在本专业基础课程上的理解能力与知识结构尚不足以支撑深入学习，长期存在较大压力和困扰。
