--- a/自愿降级申请书.md
+++ b/自愿降级申请书.md
@@ -8,7 +8,7 @@
 #### &emsp;&emsp;早在大一下开学，我就有些苦恼，即便是从教材意义上教学较为连贯的无机化学我依然掌握得不好，它一方面体现在我的测验感受中，有好些题在当时就不会，连题目所蕴含的考点是什么都不知道，简直无从下笔，另一方面则是当时就有的疑惑：隔了一个假期就已经全忘记了，这让我的学习像是在做无用功。而且尽管在适应环境，我对无机化学的投入也和数学处于同一级别，然而数学在放假回来时没有遗忘多少，无机化学却只剩笔记了。自此，我的学习质量就开始下降了，除了物理还会认真记笔记和提问，其他学科都是机械化地学习，而最后期末考试前，除了物理只是花两小时看了下习题就能回忆起大部分，其他学科全靠突击的资料和熬夜的复习。
 #### &emsp;&emsp;应当说，我在几门理科中，觉得最难的也最不喜欢是生物化学相关的内容，而对药学————这门交叉学科的学习，更放大了一个令我痛苦的感觉，知识掌握呈现单元化与碎片化，课时缺乏的教学安排，让我没有办法去梳理我所掌握的，因为实际上它们是网状的，我学习经历的记忆难以将他们联系起来，即便是我最认真学的无机化学在我最后的复习阶段也仍然不成框架。
 ### 二、我对计算机学科的热爱与长期规划
-#### &emsp;&emsp;对于这一点，我在 https://github.com/dao019/cs-study 有较为详细的梳理，在我看来，它与药学最显著的区别————从学生的角度来讲————提供了经历了检验的学习的途径和范围，化学专业应该是能做到的（尽管我并不喜欢它），但是我在兰大药学的学习显然是混沌的，我们甚至没有一本书是讲完的，成块的章节被舍弃，于是我的学习就像驮着封装的箱子。而在计算机方面，在我的规划中，我选择从微积分————一个我在刚进入大学认为会像通识课一样学完的课程开始，随着对数学进一步学习，接着是编程语言C语言，Python等等。
+#### &emsp;&emsp;对于这一点，我在 https://github.com/dao019/cs-study 有较为详细的梳理（感谢开源），在我看来，它与药学最显著的区别————从学生的角度来讲————提供了经历了检验的学习的途径和范围，化学专业应该是能做到的（尽管我并不喜欢它），但是我在兰大药学的学习显然是混沌的，我们甚至没有一本书是讲完的，成块的章节被舍弃，于是我的学习就像驮着封装的箱子。而在计算机方面，在我的规划中，我选择从微积分————一个我在刚进入大学认为会像通识课一样学完的课程开始，随着对数学进一步学习，接着是编程语言C语言，Python等等。
 #### &emsp;&emsp;正如你可以看到的一样，这是一个Markdown，我在元旦才开始使用它，在元旦，我听从一个计算机从业人员在Windows搭建了wsl环境，这个申请书.md就是在VS code书写，并同步到Github，这种规范化，应用化正是我所追求的，在整个元旦，我重装系统————力图给wsl一个新的干净的环境，下载和配置wsl————让它在我的开始就能为我所用，先后创建Organizations（已经删除）和Repositories，使用https和SSH同步，从一个个独立的文件夹到直接同步上级文件夹，设置自己的第一个别名代码：cleanwsl，我不厌其烦地询问每一个指令的报错，令我最印象深刻的是.gitignore的规则，其中的# （!类型规则不递归）（通配符规则）这一栏，我反复修改，终于成功执行只忽略无扩展名的文件。可以说，驱使我这么做的就是兴趣，只要当有人能在我感兴趣的方面给出一个能实践的指引，我都愿意去执行。我想，转入计算机能更好发挥我的兴趣，做到对CS————计算机科学不断深入地学习。或许，它的火苗来源于小时候我妈妈朋友送我的《加密与解密》，虽然看不懂，但是成体系的章节设计让我对计算机有了好感。
 ### 三、申请降级的本质：并非逃避，而是思量后的选择
 #### &emsp;&emsp;我深知，主动提出降级申请，是一个很难的选择。但是为了更系统、踏实、科学地完成学业而不是在大学四年浑浑噩噩地学习，每次期末突击，无论是否成功转专业，我都会利用这半年进行数学、化学、计算机以及英语的学习，这让我不仅能缓一口气，还能匀出时间梳理自身的知识（正如这个不同于cs-study名的文件夹一样，basic-disciplines,它会包含math，chemistry的学习文件），如果没能成功转专业，我也能更从容地完成药学学业。我相信，在一个更合理的节奏下，我能够把握好学习机会，真正提升能力、实现自我发展。
@@ -16,4 +16,4 @@
 ## 申请人：
 ## 学号：
 ## 联系电话：
-## 日期：2025年1月5日
+## 日期：2026年1月5日
